tests/errors/condition_loop_break_nonnull.dang
# A condition-based loop may skip its body, so a value-bearing break inside
# the body cannot make the loop expression non-null.
bad: String! {
  for (false) {
    break "x"
  }
}
